#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSQt
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-19
2015-11-30 Mikhail S. Dubrovin
- in GURuler add and use precision() method for labels (PSAS-34)
- extend help in app/geo
- add input parameters xcent, ycent in app/geo and propagate them to GUIMain, GeoImage, GUIImageViewer, DragCenter
- separate class GeoTree from WdgGeoTree.h/cpp files
- WdgGeo - disable +/- buttons for top geo - top coordinate frame parameters should not be edited.
	
Tag: V00-00-18
2015-11-25 Mikhail S. Dubrovin
- solve problem with zoom and bunch of other minor problems, add module WdgPointPos3D (PSAS-34)
	
Tag: V00-00-17
2015-09-09 Mikhail S. Dubrovin
- WdgFile::onButFile - fix bug in parsing input file name (PSAS-34)
	
Tag: V00-00-16
2015-09-09 Mikhail S. Dubrovin
- DragStore.cpp, GeoImage.cpp - increase (0,0) offset for big gaps like in pnccd (PSAS-34)
	xy0_off_pix[2] and center_raw (1000,1000) -> (2000,2000)

Tag: V00-00-15
2015-04-02 Mikhail S. Dubrovin
- code cleenup, cosmetic improvement of messages, in SConscript add DOCGEN
	
Tag: V00-00-14
2015-03-26 Mikhail S. Dubrovin
- Improve doxygen documentation, cleenup code (PSAS-11) 

Tag: V00-00-13
2015-03-23 Mikhail S. Dubrovin
- Add modules WdgColorBar, WdgRadHist, WdgSpecHist, 
- add multiple protections - the 1st stable version with all basic features (PSAS-11)
	
2015-03-11 Mikhail S. Dubrovin
- in GeoImage, WdgImage, ImageProc, GUIMain, GUIImageViewer signals and slots slots transfer ndarray w/o const
- GUIMain - clean-up code
- GUILogger - add showframe parameter
	
2015-03-10 Mikhail S. Dubrovin
- Multiple changes in modules:
M       app/geo.cpp - add input parameter parsing